# stream-data-pipe

./: .gitignore  README.md  bun.lockb  docker-compose-base.yaml  docker-compose-cdc.yaml  docker-compose-flink.yaml  docker-compose-ml.yaml  docker-compose-postgres.yaml  docker-compose-rw.yaml  docker-compose-spark.yaml  docker-compose.yaml  package.json  setup.sh  tsconfig.json
.github/workflows/: build-docker.yaml  check-cdc.yaml  check-flink.yaml  check-ml.yaml  check-rw.yaml  check-spark.yaml
scripts/: data.sh  init_minio.sh  run-examples.sh  run-flink-sentiment.sh  run-iceberg.sh  run-ml.sh  run-risingwave.sh  run-sentiment.sh  run-spark-stream.sh  sequin.sh
services/flink/: .gitignore  Dockerfile  README.md  config.yaml  jars.sh  pyproject.toml  quickstart.py  requirements.txt  sql-client.sh
services/flink/src/: iceberg.py  kafka_json_example.py  (+1 more)
services/generator/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/kafka/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
services/ml/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml  requirements.txt
services/ml/src/: app.py  download_model.py  stream.py
services/mosquitto/: pyproject.toml  requirements.txt
services/notebook/: .dockerignore  .gitignore  Dockerfile  Dockerfilev1  entrypoint.sh  pyproject.toml  requirements.txt  startup.py
services/notebook/notebooks/: kafka-flink-sentiment.ipynb  kafka-ml-inference.ipynb  kafka-risingwave.ipynb  kafka-spark-stream.ipynb  postgres-cdc.ipynb
services/notebook/src/: kafka_stream.py  session.py
services/polaris/: init.sh  stream.py
services/postgres/: Dockerfile  README.md  init.sh  init.sql  postgresql.conf
services/risingwave/: pyproject.toml
services/sequin/: .gitignore  README.md  playground.yml
services/spark/: Dockerfile  README.md  log4j2.properties  polaris.conf  pyproject.toml  requirements.txt  spark-defaults.conf
services/spark/src/: kafka_stream.py
services/ui/: Dockerfile  package.json
(+16 files in other folders)
