[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-flink==1.20.1",
    "duckdb-engine>=0.15.0",
    "jupyterlab-vim>=4.1.4",
    "kafka-python>=2.0.4",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "notebook>=7.3.2",
    "py4j>=0.10.9.7",
    "pyiceberg[duckdb,pandas,pyarrow]",
    "pyspark[sql,connect,pandas_on_spark]==3.5.4",
    "scipy>=1.15.2",
]
